# alg_labs

./: 1.ods  3лаба (2).docx  README.md  endoftask.py  Без имени 1.ods
lab_2/: CMakeLists.txt  closest_pair.cpp  closest_pair.h  closest_pair_test.cpp  main  main.cpp  point.cpp  point.h  point_test.cpp
lab_2/tmp/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  point_test  tests
lab_3/: CMakeLists.txt  lcs.cpp  lcs.h  Без имени 1.ods
lab_3/first/: CMakeLists.txt  lcs.cpp  lcs.h  lcs_test.cpp  main.cpp
lab_3/second/: CMakeLists.txt  activities.cpp  activities.h  activities_test.cpp  main.cpp
lab_3/tmp/: CMakeCache.txt
lab_4/first/: CMakeLists.txt  graph_test.cpp  main.cpp  shortest_path.cpp  shortest_path_test.cpp
lab_4/second/: CMakeLists.txt  main.cpp  min_spanning_tree.cpp  min_spanning_tree_test.cpp  tempCodeRunnerFile.cpp
lab_5/: CMakeLists.txt  main.cpp  main_fast.cpp  main_hard  main_hard.cpp  tsp.cpp  tsp.h  tsp_fast.cpp  tsp_hard.cpp  tsp_hard.h  tsp_test.cpp
lab_5/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main  mainfast  mainhard  test1  test2  test3
last_2/: 1.json  123.json  12345.json  12345678.json  12356.json  1243.json  134.json  test1.json  test2.json  y1.json  негр.json  негр2.json  негр3.json  негр4.json
last_work/: 123.json  2134.json  READme  Rect.py  huy.json  main.py  new.json  qq.json  s1.json  s10.json  s2.json  s5.json  save.json  sq.json  ss.json  ssd.json  ssss.json  tempCodeRunnerFile.py  test.json  test1.json  test2.json  test3.json  test4.json  test5.json
(+37 files in other folders)
